Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 <li>minibatch: 10000句</li>
 <li>AdaGrad, 初始学习率：0.5</li>
 <li>单轮迭代后词向量基本可用，单轮迭代3~4h</li>
+<li>产出（50维、100维、200维）： <a href="http://yun.baidu.com/s/1o6xEIH8">http://yun.baidu.com/s/1o6xEIH8</a>
+</li>
 </ul>
 
 <h3>
